--- a/ToDoList/GUI/GUI.csproj
+++ b/ToDoList/GUI/GUI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="Images\favicon.png" />
+    <None Remove="Images\icon-user-default.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,7 @@
 
   <ItemGroup>
     <Resource Include="Images\favicon.png" />
+    <Resource Include="Images\icon-user-default.png" />
   </ItemGroup>
 
 </Project>
